Update font choices, fix some layout issues with content footer

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ em img {
   margin-left: 0; }
 
 body {
-  font-family: "Rubik", "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Roboto Mono", "Source Code Pro", Consolas, monospace;
   font-size: 16px;
   font-weight: 300;
   font-style: normal;
@@ -74,9 +74,11 @@ abbr {
 blockquote,
 blockquote p {
   font-size: 1.25rem;
-  font-family: "Vollkorn", Garamond, "Apple Garamond", Georgia, serif;
-  font-weight: 400;
-  font-style: italic;
+  font-family: brandon-grotesque, "Century Gothic", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  text-transform: uppercase;
+  letter-spacing: 3px;
   margin: 0;
   padding: 0; }
 
@@ -84,17 +86,19 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: "Vollkorn", Garamond, "Apple Garamond", Georgia, serif;
-  font-weight: 400;
-  font-style: italic;
+  font-family: brandon-grotesque, "Century Gothic", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  text-transform: uppercase;
+  letter-spacing: 3px;
   line-height: 1rem;
   margin-top: .2rem;
   margin-bottom: .5rem; }
 
 h5,
 h6 {
-  font-family: "Rubik", "Helvetica Neue", Helvetica, sans-serif;
-  font-weight: 400;
+  font-family: "Roboto Mono", "Source Code Pro", Consolas, monospace;
+  font-weight: 500;
   font-style: normal;
   line-height: 1rem;
   margin-top: .2rem;
@@ -102,11 +106,11 @@ h6 {
 
 h1,
 .h1 {
-  font-size: 2.998rem; }
+  font-size: 3rem; }
 
 h2,
 .h2 {
-  font-size: 1.5rem; }
+  font-size: 2rem; }
 
 h3,
 .h3 {
@@ -114,11 +118,11 @@ h3,
 
 h4,
 .h4 {
-  font-size: 1rem; }
+  font-size: 0.9rem; }
 
 h5,
 .h5 {
-  font-size: 0.875rem; }
+  font-size: 0.9rem; }
 
 h6,
 .h6 {
@@ -146,7 +150,7 @@ ul {
 pre,
 code,
 samp {
-  font-family: "Source Code Pro", Consolas, monospace;
+  font-family: "Roboto Mono", "Source Code Pro", Consolas, monospace;
   font-size: inherit; }
 
 pre {
@@ -420,6 +424,16 @@ body.site {
 .content-tight {
   margin-bottom: 0; }
 
+.content-navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .content-navigation .button-primary {
+    margin-bottom: 0; }
+  .content-navigation .button-secondary-left {
+    margin-top: 1rem;
+    padding-left: 0; }
+
 .about-header {
   display: flex;
   flex-direction: row; }
@@ -432,7 +446,7 @@ body.site {
     flex: 2; }
 
 .home-header blockquote {
-  font-size: 2rem; }
+  font-size: 1.5rem; }
 
 .about-values {
   display: flex;
@@ -440,19 +454,6 @@ body.site {
   flex-wrap: wrap; }
   .about-values ul li {
     padding-bottom: 1rem; }
-
-.about-navigation {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center;
-  border-top: 1px solid #B2ADA7;
-  padding-top: 2rem; }
-  .about-navigation .button-primary {
-    margin-left: 1rem;
-    margin-bottom: 0; }
-  .about-navigation .button-secondary-left {
-    padding-left: 0; }
 
 .wild-beyond {
   background-color: #E5E2DE; }
@@ -486,15 +487,15 @@ a {
   .work a:not(.button):hover {
     color: #46C8FF; }
 
-a > span {
-  padding-top: 3px; }
-
 button,
 .button {
-  font-family: "Vollkorn", Garamond, "Apple Garamond", Georgia, serif;
+  font-family: brandon-grotesque, "Century Gothic", sans-serif;
   font-size: 1rem;
-  font-weight: 400;
-  font-style: italic;
+  font-weight: 500;
+  font-style: normal;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: .75rem;
   text-decoration: none;
   cursor: pointer;
   display: flex;
@@ -517,7 +518,7 @@ button,
     flex-direction: column; }
   button .sublabel,
   .button .sublabel {
-    font-family: "Rubik", "Helvetica Neue", Helvetica, sans-serif;
+    font-family: "Roboto Mono", "Source Code Pro", Consolas, monospace;
     font-size: .8rem;
     font-weight: 300;
     font-style: normal;
@@ -545,6 +546,7 @@ button,
 
 button i,
 .button i {
+  font-size: 1rem;
   width: 1em;
   margin-left: .5rem; }
 
@@ -643,7 +645,7 @@ pre code {
 
 pre,
 code {
-  font-family: "Source Code Pro", Consolas, monospace; }
+  font-family: "Roboto Mono", "Source Code Pro", Consolas, monospace; }
 
 code {
   color: #7a7a7a; }
@@ -841,15 +843,18 @@ textarea {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 3rem 2rem;
     grid-column-gap: .75rem;
-    font-family: "Vollkorn", Garamond, "Apple Garamond", Georgia, serif;
-    font-weight: 400;
-    font-style: italic; }
+    font-family: brandon-grotesque, "Century Gothic", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: .8rem; }
     .header-content ul.nav li {
       margin: 0;
       line-height: 2rem; }
       .header-content ul.nav li.site-title {
         grid-column: 1 / span 2;
-        font-size: 1.6rem;
+        font-size: 1.25rem;
         line-height: 3rem; }
       .header-content ul.nav li a {
         display: inline-block;
@@ -968,7 +973,7 @@ footer {
     background-color: #E5E2DE; }
 
 .footer-inner {
-  max-width: 20rem;
+  max-width: 26rem;
   margin: 1em; }
 
 .social-icons-left, .social-icons-right {
@@ -1041,11 +1046,11 @@ a.card {
       width: 100%;
       height: 100%;
       background: rgba(0, 0, 0, 0.7) 10%;
-      background: linear-gradient(155deg, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0) 40%); }
-    a.card > div > div, a.card > div > span, a.card > div > h2 {
+      background: linear-gradient(155deg, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0) 45%); }
+    a.card > div > div, a.card > div > span, a.card > div > h3 {
       position: relative;
       z-index: 5; }
-    a.card > div > h2 {
+    a.card > div > h3 {
       margin-bottom: .2rem; }
   a.card p {
     color: white;
@@ -1086,8 +1091,8 @@ a.card {
     font-size: .8rem; }
   .project-header_left {
     flex: 2; }
-    .project-header_left p {
-      color: #99938c; }
+    .project-header_left h3 {
+      line-height: 1.5rem; }
   .project-header_right {
     flex: 3;
     border: 0;
@@ -1110,17 +1115,6 @@ a.card {
     text-align: center; }
     .project-content blockquote p {
       margin-bottom: 0; }
-
-.project-navigation {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center; }
-  .project-navigation .button-primary {
-    margin-left: 1rem;
-    margin-bottom: 0; }
-  .project-navigation .button-secondary-left {
-    padding-left: 0; }
 
 .project-footer {
   display: flex;
@@ -1265,9 +1259,9 @@ a.card {
     padding: 0; }
   .error-text > span {
     color: #B2ADA7;
-    font-family: "Vollkorn", Garamond, "Apple Garamond", Georgia, serif;
-    font-weight: 400;
-    font-style: italic; }
+    font-family: brandon-grotesque, "Century Gothic", sans-serif;
+    font-weight: 500;
+    font-style: normal; }
   .error-text > div {
     flex: 1;
     display: flex;
@@ -1460,7 +1454,7 @@ a.card {
 
   h1,
   .h1 {
-    font-size: 2.998rem; }
+    font-size: 3rem; }
 
   .header-wrap {
     height: 48px; }
@@ -1486,6 +1480,11 @@ a.card {
 
   .content.first {
     margin-top: 7rem; }
+
+  .content-navigation {
+    flex-direction: row-reverse; }
+    .content-navigation .button-secondary-left {
+      margin-top: 0; }
 
   .project-hero {
     height: 16rem; }
@@ -1521,7 +1520,7 @@ a.card {
     margin-top: 0; } }
 @media screen and (min-width: 44rem) {
   .footer-inner {
-    max-width: 32rem; }
+    max-width: 36rem; }
 
   footer ul {
     flex-direction: row; } }
